Add a config round trip test with a parameter for the resource. Add a parallel test for resources from a parameter.